@@ -18,7 +18,7 @@ define( function( require ) {
   // strings
   var simTitle = require( 'string!PH_SCALE/ph-scale.name' );
 
-  var screens = [ new SolutionsScreen(), new CustomScreen() ];
+  var screens = [ new BasicsScreen(), new SolutionsScreen(), new CustomScreen() ];
 
   var simOptions = {
     credits: {
@@ -32,14 +32,10 @@ define( function( require ) {
 
   // Appending '?dev' to the URL will enable developer-only features.
   if ( window.phetcommon.getQueryParameter( 'dev' ) ) {
-
-    // add the 'Basics' screen, to simplify testing
-    screens.push( new BasicsScreen() );
-
     // add dev-specific options here
     simOptions = _.extend( {
       showHomeScreen: false,
-      screenIndex: 1
+      screenIndex: 0
     }, simOptions );
   }
 
