@@ -1,3 +1,5 @@
+1/23/13 make 'Basics' screen an official part of ph-scale sim
+1/23/13 MAJOR DESIGN CHANGES REQUESTED
 # 1.0.0-dev.6 1/22/14
 1/22/14 clip ratio feature to shape of solution in beaker
 1/22/14 implement ratio feature as it was in Java, too slow to be usable, not clipped to solution bounds
